--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" type="image/svg+xml" href="logo/yumzy.png" />
+    <link rel="shortcut icon" type="image/svg+xml" href="/logo/yumzy.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yumzy</title>
   </head>
